--- a/style.css
+++ b/style.css
@@ -1,10 +1,8 @@
-html {
-  height: 100%;
-  width: 100%;
-}
-
 body {
-	background: #33363D;
+	background: url("https://sf-applications.s3.amazonaws.com/Bear/wallpapers/05/july-2020-wallpaper_desktop-3840x1600.png");
+  background-size: cover;
+  background-position: 50% 60%;
+  background-attachment: fixed;
   color: white;
   font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
 }
@@ -30,13 +28,11 @@ body {
   border-radius: 10px;
   margin: 10px;
   font-weight: 400;
-  word-break: keep-all;
   letter-spacing: 1px
 }
 
 .heading h1 {
-  font-weight: 400;
-  word-break: keep-all;
+  font-weight: 500;
   letter-spacing: 1px;
   font-size: 25px;
   text-shadow: 2px 2px 10px black;
@@ -66,13 +62,29 @@ body {
   background-color: #009900;
 }
 
+.drag-item-list {
+  list-style-type: none;
+  margin: 0 12px 0 12px;
+  padding: 0;
+  background-color: rgba(0, 0, 0, 0.8);
+  border-radius: 5px;
+}
+
+.drag-item {
+  width: 100%;
+  margin: 3px 3px 3px 3px;
+  min-height: 50px;
+  height: auto;
+}
+
 .add-btn {
+  margin-left: 15px;
   padding-bottom: 10px;
 }
 
 .add-btn span {
-  margin-left: 30px;
   font-size: 20px;
+  margin-right: 5px;
 }
 
 @media screen and (max-width: 800px) {
