--- a/style.css
+++ b/style.css
@@ -77,14 +77,55 @@ body {
   height: auto;
 }
 
-.add-btn {
-  margin-left: 15px;
-  padding-bottom: 10px;
+.add-btn-group {
+  display: flex;
+  justify-content: space-between;
 }
 
-.add-btn span {
-  font-size: 20px;
-  margin-right: 5px;
+.add-btn {
+  margin: 10px;
+  padding: 5px 10px;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  width: fit-content;
+  border-radius: 5px;
+  transition: all 0.3s ease-in;
+  user-select: none;
+}
+
+.add-btn:hover {
+  background-color: rgba(255, 255, 255, 0.9);
+  color: black;
+}
+
+.solid {
+  display: none;
+}
+
+.add-container {
+  margin: 10px;
+  padding: 5px 10px;
+  border-radius: 10px;
+  background-color: rgba(255, 255, 255, 0.9);
+  min-height: 100px;
+  display: none;
+}
+
+.add-item {
+  width: 100%;
+  min-height: 100px;
+  height: auto;
+  background-color: white;
+  border-radius: 10px;
+  margin: 5px auto;
+  resize: none;
+  color: black;
+  padding: 10px;
+}
+
+.add-item:focus {
+  outline: none;
 }
 
 @media screen and (max-width: 800px) {
