--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 body {
-	background: url("https://wallpaperaccess.com/full/17520.jpg");
+	background: url("./space.jpg");
   background-size: cover;
   background-position: 50% 60%;
   background-attachment: fixed;
   color: white;
-  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 :root {
@@ -68,9 +68,9 @@ body {
   background-color: rgba(0, 0, 0, 0.8);
 }
 
-.title-heading {
+.app-title, .app-description {
   text-align: center;
-  font-weight: 500;
+  font-weight: 700;
   letter-spacing: 2px;
 }
 
@@ -88,14 +88,14 @@ body {
   justify-content: center;
   border-radius: 10px;
   margin: 10px;
-  font-weight: 400;
+  font-weight: 600;
   letter-spacing: 1px
 }
 
 .heading h1 {
   font-weight: 500;
   letter-spacing: 1px;
-  font-size: 25px;
+  font-size: 20px;
   text-shadow: 2px 2px 10px black;
 }
 
@@ -168,7 +168,6 @@ body {
   filter: brightness(95%);
   color: white;
 }
-
 
 .add-container {
   margin: 10px;
